Fix QR code button overflowing past the screen

--- a/src/themes/style.css
+++ b/src/themes/style.css
@@ -90,6 +90,10 @@ header .nav-group {
   min-width: 0;
 }
 
+header #nav-group-actions {
+  min-width: fit-content;
+}
+
 header .nav-item {
   display: flex;
 }
